tests/NormalTests/paczka1/fuzzy1/57012280.err
Error in line 2: x3v8dbX A454 69,8
Error in line 4: x3v8dbX S823 28,2
Error in line 6: aBZb6 A	08 98,1
Error in line 13: hO4eSita A454 95,5
Error in line 15: aBZb6 A454 81,5
Error in line 33: hO4eSita A454 91,7
